--- a/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
+++ b/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
@@ -4,6 +4,12 @@
   flex-direction: column;
   align-items: center;
   scroll-snap-align: end;
+  cursor: pointer;
+  transition: opacity 0.2s linear 0.05s;
+}
+
+.ingredient:hover {
+  opacity: 0.7;
 }
 
 .price {
