Feature: add OrderContext, add  functions for creating burgers and orders, refactor some methods

--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -6,6 +6,11 @@
   align-items: flex-end;
 }
 
+.bunContainer {
+  width: 568px;
+  transform: translateX(30px);
+}
+
 .mainList {
   list-style: none;
   margin: 0;
