--- a/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
+++ b/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
@@ -12,6 +12,11 @@
   opacity: 0.7;
 }
 
+.ingredientDragging {
+  composes: ingredient;
+  filter: drop-shadow(16px 16px 20px red) invert(75%);
+}
+
 .price {
   display: flex;
 }
