--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -29,7 +29,7 @@
   margin-right: 0;
 }
 
-.navLink {
+.navLinkActive {
   margin: 0;
   padding: 16px 20px;
   box-sizing: border-box;
@@ -43,17 +43,17 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  color: #f2f2f3;
+}
+
+.navLink {
+  composes: navLinkActive;
   color: #8585ad;
   transition: opacity 0.2s linear 0.05s;
 }
 
 .navLink:hover {
   opacity: 0.7;
-}
-
-.navLinkActive {
-  composes: navLink;
-  color: #f2f2f3;
 }
 
 .logoContainer {
