--- a/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
+++ b/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
@@ -1,11 +1,5 @@
 .ingredient {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  scroll-snap-align: end;
-  cursor: pointer;
-  transition: opacity 0.2s linear 0.05s;
 }
 
 .ingredient:hover {
@@ -15,6 +9,17 @@
 .ingredientDragging {
   composes: ingredient;
   filter: drop-shadow(16px 16px 20px red) invert(75%);
+}
+
+.link {
+  color: #f2f2f3;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  scroll-snap-align: end;
+  cursor: pointer;
+  transition: opacity 0.2s linear 0.05s;
 }
 
 .price {
