--- a/src/components/IngredientDetails/IngredientDetails.module.css
+++ b/src/components/IngredientDetails/IngredientDetails.module.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.title {
+  margin: 120px 0 0 0;
+}
+
 .energyValueContainer {
   list-style: none;
   padding-left: 0;
