--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -39,6 +39,14 @@
   color: #f2f2f3;
 }
 
+.exitButton {
+  composes: navLink;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border: none;
+}
+
 .input {
   margin-bottom: 24px;
 }
@@ -54,6 +62,7 @@
   border: none;
   color: #4c4cff;
   cursor: pointer;
+  transition: all 0.4s linear 0.05s;
 }
 
 .button:disabled {
