--- a/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
+++ b/src/components/BurgerIngredientItem/BurgerIngredientsItem.module.css
@@ -2,10 +2,6 @@
   position: relative;
 }
 
-.ingredient:hover {
-  opacity: 0.7;
-}
-
 .ingredientDragging {
   composes: ingredient;
   filter: drop-shadow(16px 16px 20px red) invert(75%);
@@ -19,7 +15,11 @@
   align-items: center;
   scroll-snap-align: end;
   cursor: pointer;
-  transition: opacity 0.2s linear 0.05s;
+  transition: transform 0.2s linear 0.05s;
+}
+
+.link:hover {
+  transform: scale(1.03);
 }
 
 .price {
@@ -33,6 +33,7 @@
 
 .priceText {
   margin-right: 8px;
+  transition: all 0.2s linear 0.05s;
 }
 
 .name {
